deployment error fixed

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ GITHUB_SECRET_ID =96a9e84c06c7f4b13e7da18f1a4ebf27c9e329a8
 NEXTAUTH_SECRET=aYw6Qxsw1OTxNu++6jtPsMsIvXYIjweh2lWwf0OujZI
 
 5uDOU1UVd5aDwwKN
-PUSHER_APP-ID=1696923
+PUSHER_APP_ID=1696923
 PUSHER_SECRET=70814f17ccc8ee21762f
 NEXT_PUBLIC_PUSHER_KEY=dedc78af5fe28ffa7123
 
