--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
@@ -16,7 +17,8 @@
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@types/node": "^20",
